--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maharoni Pratama</title>
+    <title>salingka github app</title>
     <meta name="description" content="Solusi inovatif untuk meningkatkan produktivitas dan capai hasil maksimal bisnis Anda di dunia digital. Layanan jasa profesional terpercaya dengan 100+ pelanggan.">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Maharoni Pratama">
+    <meta property="og:title" content="salingka github app">
     <meta property="og:description" content="Solusi inovatif untuk meningkatkan produktivitas dan capai hasil maksimal bisnis Anda di dunia digital. Layanan jasa profesional terpercaya dengan 100+ pelanggan.">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Maharoni Pratama">
+    <meta name="twitter:title" content="salingka">
     <meta name="twitter:description" content="Solusi inovatif untuk meningkatkan produktivitas dan capai hasil maksimal bisnis Anda di dunia digital. Layanan jasa profesional terpercaya dengan 100+ pelanggan.">
     <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Apa saja jenis layanan yang ditawarkan?","acceptedAnswer":{"@type":"Answer","text":"Kami menawarkan berbagai solusi profesional termasuk konsultasi bisnis, pengembangan strategi digital, manajemen proyek, optimasi operasional, dan lain-lain."}},{"@type":"Question","name":"Bagaimana proses untuk kerja sama?","acceptedAnswer":{"@type":"Answer","text":"Proses kami dimulai dengan konsultasi awal untuk memahami kebutuhan Anda, diikuti dengan proposal yang detail, eksekusi proyek, dan evaluasi berkelanjutan untuk memastikan hasil yang optimal."}},{"@type":"Question","name":"Apakah melayani bisnis skala kecil?","acceptedAnswer":{"@type":"Answer","text":"Ya, kami berdedikasi untuk membantu bisnis dari berbagai skala, mulai dari startup hingga perusahaan besar. Kami memiliki solusi yang fleksibel untuk setiap kebutuhan."}},{"@type":"Question","name":"Bagaimana memastikan kepuasan pelanggan?","acceptedAnswer":{"@type":"Answer","text":"Kami berkomitmen pada transparansi, komunikasi terbuka, dan pengiriman hasil yang berkualitas. Tim kami bekerja erat dengan klien di setiap tahap proyek untuk memastikan kepuasan maksimal."}}]}</script>
@@ -27,7 +27,7 @@
         <div class="container nav-container">
             <a href="#" class="logo"><span class="logo-text">Maharoni Pratama</span></a>
             <nav class="nav-menu" id="navMenu">
-                <a href="https://maharonipratama.com">Home</a>
+                <a href="index.html">Home</a>
 				<a href="#stats">Statistik</a>
 				<a href="#benefits">Kenapa?</a>
                 <a href="#features">Layanan</a>
